# uniquememory

./: .gitignore  .release-please-config.json  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
accounts/: admin.py  forms.py  models.py
accounts/api/: __init__.py  serializers.py  urls.py  viewsets.py
accounts/migrations/: 0001_initial.py
audit/: admin.py  apps.py  middleware.py  models.py  signals.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py  0002_rename_audit_audit_app_lab_9872a2_idx_audit_audit_app_lab_a84053_idx_and_more.py
chunks/: admin.py  models.py  tests.py  urls.py  views.py
companies/: admin.py  models.py
consents/: admin.py  apps.py  models.py  signals.py
consents/api/: urls.py  (+2 more)
delivery/: GA_RELEASE_NOTES.md  README.md
docs/: backlog.md
embeddings/: models.py
gateway/: middleware.py
graph/: admin.py  apps.py  models.py
mcp/: apps.py  auth.py  manifest.py
memory/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
policies/: admin.py  engine.py  models.py  tests.py  urls.py  views.py
portal/: apps.py  forms.py  urls.py  views.py
scripts/: deploy.sh
security/: dlp.py
templates/: base.html
tests/: test_consents.py  test_query.py  test_webhooks_models.py
uniquememory/: asgi.py  settings.py  urls.py  wsgi.py
webhooks/: __init__.py  apps.py  models.py  signal_handlers.py
(+65 files in other folders)
